--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,27 +1,32 @@
-<form action="/login" method="post">
-    <div>
-        <h1>Login</h1>
-    </div>
-    <div class+"login">
-        <label for="username:"></label>
-        <input
-            type="text"
-            name="username"
-            id="username"
-            placeholder="Username"/>
-    </div>
-    <div class="login">
-        <label for="password"></label>
-        <input type="text"
-            name="password"
-            id="password"
-            placeholder="password"/>
-    </div>
-    <div>
-        <input type="submit" value="Login" />
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel='stylesheet' href='/public/css/style.css' />
+  <title>Project 2</title>
+</head>
+<body>
+  <form action="./login">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"></script>
+<script src="/public/js/login.js"></script>
+  </body>
+</html>
+<form>
 
 
 
