--- a/views/userProfile.handlebars
+++ b/views/userProfile.handlebars
@@ -11,6 +11,7 @@
     <div class="container mt-5">
         <div class="d-flex justify-content-center mb-4">
             <div class="card" style="width: 18rem;">
+            <div class="card-body">
                 {{!-- <img src="{{user.image_url}}" class="card-img-top" alt="User Image"> --}}
                 <div class="card-body">
                     <h5 class="card-title">{{user.username}}</h5>
