--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,9 +33,9 @@
 
             <div class="col-md-3 text-end">
                 {{#if loggedIn}}
-                <button type="button" class="btn btn-outline-primary me-2">Logout</button>
+                <button type="button" id="logout" class="btn btn-outline-primary me-2">Logout</button>
                 {{else}}
-                <button type="button" class="btn btn-outline-primary me-2">Login</button>
+                <button type="button" id="login" class="btn btn-outline-primary me-2">Login</button>
                 {{/if}}
                 <button type="button" class="btn btn-primary">Sign-up</button>
             </div>
@@ -60,6 +60,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <script src="/public/js/logout.js"></script>
+        <script src="/public/js/login.js"></script>
 </body>
 
 </html>
