--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
                 {{#if loggedIn}}
                 <button type="button" id="logout" class="btn btn-outline-primary me-2">Logout</button>
                 {{else}}
-                <button type="button" id="login" class="btn btn-outline-primary me-2">Login</button>
+                <a href="/login" class="btn btn-outline-primary me-2">Login</a>
                 {{/if}}
                 <button type="button" class="btn btn-primary">Sign-up</button>
             </div>
@@ -55,6 +55,8 @@
                 </ul>
             </div> --}}
         </header>
+
+        {{{body}}}
      
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
