--- a/views/createStory.handlebars
+++ b/views/createStory.handlebars
@@ -12,9 +12,13 @@ to do:
 
 {{!-- these links and js are specific to this page only --}}
 
+{{extend "layouts/main"}}
+
 <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet" />
+
+<h1>Create a story - Collaboratively!</h1>
 
 <div class="container justify-content-center">
     <div class="row align-items-end p-5 g-5">
