login fix and bcrypt

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 {{!-- cleaned this up a tiny bit to get rid of things that can go in the main.handlebars --}}
-  <form action="./login">
+ <form id="loginForm">
   <div class="form-group">
     <label for="InputEmail">Email address</label>
     <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
@@ -13,7 +13,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 crossorigin="anonymous"></script>
-<script src="/public/js/login.js"></script>
+<script src="/js/login.js"></script>
 <form>
 
 
