--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,41 +5,11 @@
         </h2>
     </div>
     <div class="py-5">
-        <div class="container text-center">
-            <div class="row">
-                <div class="col-md-4">
-
-                    <div class="card h-100">
-                        <div class="card-body">
-
-                            {{story}}
-
-                        </div>
-                    </div>
-
-                </div>
-                <div class="col-md-4">
-
-                    <div class="card h-100">
-                        <div class="card-body">
-
-                            {{story}}
-
-                        </div>
-                    </div>
-
-                </div>
-                <div class="col-md-4">
-
-                    <div class="card h-100">
-                        <div class="card-body">
-
-                            {{story}}
-
-                        </div>
-                    </div>
-
-                </div>
+        <div class="container justify-content-center">
+            <div class="row align-items-center p-5 g-5">
+                {{#each homepage.stories as |story|}}
+                {{> story}}
+                {{/each}}
             </div>
         </div>
     </div>
