--- a/views/partials/story.handlebars
+++ b/views/partials/story.handlebars
@@ -1,10 +1,12 @@
-<div class="card" style="width: 18rem;">
+<div class="col-md-4">
+  <div class="card">
     <a href="/story/{{id}}">
-  <div class="card-body">
-    <h5 class="card-title">{{title}}</h5>
-    <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-    <p class="card-text">{{segment}}.</p>
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
+      <div class="card-body">
+        <h5 class="card-title">{{title}}</h5>
+        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+        <p class="card-text">{{segment}}.</p>
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
   </div>
 </div>
