--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/b52e995b7a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,12 +21,12 @@
         <header
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
             <div class="col-md-3 mb-2 mb-md-0">
-                {{! <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+                <!-- {{! <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
                     <div>
                         Website Name
                     </div>
-                </a> }}
-                <div class="p-3">
+                </a> }} -->
+                <div class="h3 p-3">
                     Website Name
                 </div>
             </div>
@@ -46,13 +47,13 @@
                 {{/if}}
                 <button type="button" class="btn btn-primary me-3">Sign-up</button>
             </div>
-            {{! <div class="dropdown text-end">
+            <div class="dropdown text-end mx-3">
                 <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
                     data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                    <i class="fa-solid fa-user"></i>
                 </a>
                 <ul class="dropdown-menu text-small" style="">
-                    <li><a class="dropdown-item" href="#">New project...</a></li>
+                    <li><a class="dropdown-item" href="/createstory">New project...</a></li>
                     <li><a class="dropdown-item" href="#">Settings</a></li>
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li>
@@ -60,7 +61,7 @@
                     </li>
                     <li><a class="dropdown-item" href="#">Sign out</a></li>
                 </ul>
-            </div> }}
+            </div> 
         </header>
 
         {{{body}}}
