login/homepage route loads with story data

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,7 +7,7 @@
     <div class="py-5">
         <div class="container justify-content-center">
             <div class="row align-items-center p-5 g-5">
-                {{#each homepage.stories as |story|}}
+                {{#each stories as |story|}}
                 {{> story}}
                 {{/each}}
             </div>
