--- a/views/partials/story.handlebars
+++ b/views/partials/story.handlebars
@@ -2,9 +2,9 @@
   <div class="card">
     <a href="/story/{{id}}">
       <div class="card-body">
-        <h5 class="card-title">{{title}}</h5>
+        <h5 class="card-title">{{story_title}}</h5>
         <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-        <p class="card-text">{{segment}}.</p>
+        <p class="card-text">{{segments}}.</p>
         <a href="#" class="card-link">Card link</a>
         <a href="#" class="card-link">Another link</a>
       </div>
