--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,20 +1,25 @@
 {{!-- cleaned this up a tiny bit to get rid of things that can go in the main.handlebars --}}
- <form id="loginForm">
-  <div class="form-group">
-    <label for="InputEmail">Email address</label>
-    <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
-  </div>
-  <div class="form-group">
-    <label for="InputPassword">Password</label>
-    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-crossorigin="anonymous"></script>
-<script src="/js/login.js"></script>
-<form>
+    <form id="loginForm">
+      <div style="text-align: center; border: 2px solid #000; 
+        border-radius: 20px; margin-top: 100px;" class="formLogin">
+          <div style="padding: 20px;" class="form-group">
+            <label for="InputEmail"><h3>Email address</h3></label>
+            <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+          </div>
+          <div style="padding: 20px;" class="form-group">
+            <label for="InputPassword"><h3>Password</h3></label>
+            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+          </div>
+        <div style="padding: 10px;" class="submit">
+          <button type="submit" class="btn btn-success mx-auto p-2">Submit</button>
+        </div>
+      </div>
+    </form>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+  crossorigin="anonymous"></script>
+  <script src="/js/login.js"></script>
+
 
 
 
