worked on routes for createStory and users, fixed some css, cleaned up the homepage a little

--- a/views/createStory.handlebars
+++ b/views/createStory.handlebars
@@ -12,7 +12,7 @@ to do:
 
 {{!-- these links and js are specific to this page only --}}
 
-{{extend "layouts/main"}}
+{{!-- {{extend "layouts/main"}} --}}
 
 <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -100,4 +100,4 @@ to do:
 </div>
 </div>
 
-<script src="public/js/createStory.js"></script>
+<script src="/js/createStory.js"></script>
