--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -12,6 +12,15 @@
 }
 
 
+/* nav bar stuff */
+
+#center-nav-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
 
 
 #visit-profile-text:hover {
@@ -47,7 +56,6 @@
   font-style: normal;
 }
 
-<<<<<<< Updated upstream
 /* css for the newadventure prompt */
 
 #prompt-container {
@@ -58,17 +66,4 @@
   font-weight: bold !important;
   font-style: italic;
   font-size: larger;
-=======
-
-.login-form label,
-.login-form input,
-.login-form button {
-  display: block;
-  width: 100%;
-  margin-bottom: 10px;
-}
-
-.login-form button {
-  padding: 10px;
->>>>>>> Stashed changes
 }
