--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,25 +1,38 @@
-{{!-- cleaned this up a tiny bit to get rid of things that can go in the main.handlebars --}}
-    <form id="loginForm">
-      <div style="text-align: center; border: 2px solid #000; 
-        border-radius: 20px; margin-top: 100px;" class="formLogin">
-          <div style="padding: 20px;" class="form-group">
-            <label for="InputEmail"><h3>Email address</h3></label>
-            <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
-          </div>
-          <div style="padding: 20px;" class="form-group">
-            <label for="InputPassword"><h3>Password</h3></label>
-            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-          </div>
-        <div style="padding: 10px;" class="submit">
-          <button type="submit" class="btn btn-success mx-auto p-2">Submit</button>
+{{!-- Login-Page --}}
+
+<div class="d-flex justify-content-center align-items-center">
+  <form id="loginForm" class="d-flex justify-content-center align-items-center mt-6 p-5">
+    <div style="text-align: center; border: 2px solid #6c757d; border-radius: 20px;" class="formLogin">
+      <h4 class="mt-4 px-4 pt-2 mb-2" id="logIn-title">Already have an account?</h4>
+      <h6 class="card-subtitle fst-italic mb-4 mt-0 text-body-secondary">Please fill out the form below
+      </h6>
+      <div style="padding: 20px;" class="form-group">
+        <label for="InputEmail">
+          <h3>Email address</h3>
+        </label>
+        <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+      </div>
+      <div style="padding: 20px;" class="form-group">
+        <label for="InputPassword">
+          <h3>Password</h3>
+        </label>
+        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+      </div>
+      <div style="padding: 10px;" class="submit">
+        <button type="submit" class="btn btn-success mx-auto p-2 mb-5">Login</button>
+      </div>
+      <div>
+        <h4 class="mt-0 px-4 pt-2 mb-3" id="logIn-title">New User?</h4>
+        <h6 class=" fst-italic mb-2">New users may register <br> by clicking the button below:</h6>
+        <div style="padding: 20px;" class="submit">
+          <button type="submit" class="btn btn-success mx-auto p-2" id="createAccountButton">CREATE NEW ACCOUNT</button>
         </div>
       </div>
-    </form>
+    </div>
+  </form>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-  crossorigin="anonymous"></script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <script src="/js/login.js"></script>
-
-
-
-
