--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
             <div class="col-md-4 mb-2 mb-md-0 text-start">
                 <div class="h3 p-3">
-                    Project-2-need a better name
+                    Project-2
                 </div>
             </div>
 
@@ -46,7 +46,7 @@
 
             <div class="col-md-4 text-end">
                 {{#if loggedIn}}
-                <button type="button" id="logout" class="btn btn-outline-primary me-4">Logout</button>
+                <button type="button" id="logoutBtn" class="btn btn-outline-primary me-4">Logout</button>
                 {{else}}
                 <a href="/login" class="btn btn-outline-primary me-2">Login</a>
                 {{!-- have this button below take you to the registerUser.handlebars --}}
@@ -72,6 +72,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <script src="/js/logout.js"></script>
 </body>
 
 </html>
