--- a/views/partials/story.handlebars
+++ b/views/partials/story.handlebars
@@ -5,7 +5,7 @@
         <h5 class="card-title">{{story_title}}</h5>
         {{#each segments}}
           {{#if @first}}
-        <h6 class="card-subtitle mb-2 text-body-secondary">{{created_by}}</h6>
+        <h6 class="card-subtitle mb-2 text-body-secondary">Created By: {{user.username}}</h6>
         <p class="card-text">{{segment_content}}</p>
         <a href="#" class="card-link">Card link</a>
         <a href="#" class="card-link">Another link</a>
