moved api routes to controller routes and fixed create acount button thank you michael

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,7 +46,7 @@
 
             <div class="col-md-4 text-end">
                 {{#if loggedIn}}
-                <a href='/logout' type="button" id="logout" class="btn btn-outline-primary me-2">Logout</a>
+                <button type="button" id="logoutBtn" class="btn btn-outline-primary me-2">Logout</button>
                 {{else}}
                 <a href="/login" class="btn btn-outline-primary me-2">Login</a>
                 <button type="button" class="btn btn-primary me-3">Sign-up</button>
