--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -25,7 +25,7 @@
         <h4 class="mt-0 px-4 pt-2 mb-3" id="logIn-title">New User?</h4>
         <h6 class=" fst-italic mb-2">New users may register <br> by clicking the button below:</h6>
         <div style="padding: 20px;" class="submit">
-          <button type="submit" class="btn btn-success mx-auto p-2" id="createAccountButton">CREATE NEW ACCOUNT</button>
+          <a href="/registerUser" class="btn btn-success mx-auto p-2" id="createAccountButton">CREATE NEW ACCOUNT</a>
         </div>
       </div>
     </div>
