we did it, new user can be registereeeddddgit add .

--- a/views/registerUser.handlebars
+++ b/views/registerUser.handlebars
@@ -31,8 +31,8 @@
         </div>
       </div>
 
-      <div class="submit d-flex justify-content-center mt-4" id="create-account-btn">
-        <button type="submit" class="btn btn-success p-2">Create Account</button>
+      <div class="submit d-flex justify-content-center mt-4">
+        <button type="submit" class="btn btn-success p-2" id="create-account-btn">Create Account</button>
       </div>
     </div>
   </div>
