--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,12 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Project 2</title>
+    <title>Story-Roulette</title>
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Project-2</title>
+        <title>Story-Roulette</title>
         {{!-- Connect Bootstrap CSS --}}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -32,7 +32,7 @@
         <header class="d-flex flex-wrap align-items-center justify-content-center py-3 mb-4 border-bottom">
             <div class="col-md-4 mb-md-0 text-start">
                 <div class="h3 p-3">
-                    Project-2
+                    Story-Roulette
                 </div>
             </div>
 
