--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,7 +42,7 @@
                 <ul class="nav">
                     {{!-- homepage works when clicked!!! YEAH BABES! --}}
                     <li><a href="/homepage" class="nav-link px-2">Home</a></li>
-                    <li><a href="/createStory" class="nav-link px-2">Tell a Story</a></li>
+                    <li><a href="/gameMode" class="nav-link px-2">Tell a Story</a></li>
                 </ul>
             </div>
 
