saves story to db, just need to save genre and prompt

--- a/views/adventureModeNew.handlebars
+++ b/views/adventureModeNew.handlebars
@@ -36,7 +36,7 @@
                     <div class="modal-body">
                       <div>
                         <p>Story Title: 
-                          <input type="text"></input>
+                          <input type="text" id="storyTitle"></input>
                         </p>
                       </div>
                         <!-- Quill CSS link -->
@@ -48,7 +48,6 @@
                             <p><br /></p>
                         </div>
                     </div>
-                    </form>
                     <div class="modal-footer">
                         <button class="btn btn-primary" id="submit-adventure">Submit</button>
                     </div>
