--- a/views/partials/story.handlebars
+++ b/views/partials/story.handlebars
@@ -1,14 +1,14 @@
 <div class="col-md-4">
   <div class="card">
-    <a href="/story/{{id}}">
+    <a href="/story/{{id}}" class="text-decoration-none">
       <div class="card-body">
         <h5 class="card-title">{{story_title}}</h5>
         {{#each segments}}
           {{#if @first}}
         <h6 class="card-subtitle mb-2 text-body-secondary">Created By: {{user.username}}</h6>
-        <p class="card-text" id="output">{{{segment_content}}}</p>
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+          <p class="card-text" id="output">{{{segment_content}}}</p>
+        <a></a>
+        <a></a>
           {{/if}}
         {{/each}}
       </div>
