Revert "Read me"

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -61,7 +61,7 @@
                     </a>
                     <div class="dropdown-menu text-small">
                         <a class="dropdown-item" href="/userProfile" id="visit-profile-text">Visit Profile Page</a>
-                        {{!-- <button class="dropdown-item" id="darkModeToggle" onclick="toggleDarkMode()">Go Dark Mode <i class="fa-solid fa-glasses"></i></button> --}}
+                        <button class="dropdown-item" id="darkModeToggle" onclick="toggleDarkMode()">Go Dark Mode <i class="fa-solid fa-glasses"></i></button>
                     </div>
                 </div>
 
@@ -70,13 +70,12 @@
 
         {{{body}}}
 
-
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="/js/logout.js"></script>
-
+    <script src="/js/navbar.js"></script>
 </body>
 
 </html>
