--- a/views/partials/story.handlebars
+++ b/views/partials/story.handlebars
@@ -1,5 +1,3 @@
-<link href="/public/css/custom.css" type="text/css" rel="stylesheet" />
-
 <div class="col-md-4">
   <div class="card">
     <a href="/story/{{id}}">
@@ -7,14 +5,12 @@
         <h5 class="card-title">{{story_title}}</h5>
         {{#each segments}}
           {{#if @first}}
-        <h6  id="userName" class="card-subtitle mb-2 text-body-secondary">Created By: {{user.username}}</h6>
-        <p class="card-text">{{segment_content}}</p>
+        <h6 class="card-subtitle mb-2 text-body-secondary">Created By: {{user.username}}</h6>
+        <p class="card-text" id="output">{{{segment_content}}}</p>
         <a href="#" class="card-link">Card link</a>
         <a href="#" class="card-link">Another link</a>
           {{/if}}
         {{/each}}
       </div>
   </div>
-  
-
 </div>
