resubmitting css and README

--- a/views/partials/story.handlebars
+++ b/views/partials/story.handlebars
@@ -6,9 +6,9 @@
         {{#each segments}}
           {{#if @first}}
         <h6 class="card-subtitle mb-2 text-body-secondary">Created By: {{user.username}}</h6>
-          <p class="card-text" id="output">{{{segment_content}}}</p>
-        <a></a>
-        <a></a>
+        <p class="card-text" id="output">{{{segment_content}}}</p>
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
           {{/if}}
         {{/each}}
       </div>
