having the submit story button redirect to the homepage

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -61,7 +61,7 @@
                     </a>
                     <div class="dropdown-menu text-small">
                         <a class="dropdown-item" href="/userProfile" id="visit-profile-text">Visit Profile Page</a>
-                        <button class="dropdown-item" id="darkModeToggle" onclick="toggleDarkMode()">Go Dark Mode <i class="fa-solid fa-glasses"></i></button>
+                        {{!-- <button class="dropdown-item" id="darkModeToggle" onclick="toggleDarkMode()">Go Dark Mode <i class="fa-solid fa-glasses"></i></button> --}}
                     </div>
                 </div>
 
