making the logo clickable and to take you to the home page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,9 @@
         <header class="d-flex flex-wrap align-items-center justify-content-center py-3 mb-4 border-bottom">
             <div class="col-md-4 mb-md-0 text-start">
                 <div class="h3 p-3">
-                    Story-Roulette <i class="fa-solid fa-dice"></i>
+                    <div class="home">
+                    <a href="/homepage">Story-Roulette <i class="fa-solid fa-dice"></i></a>
+                    </div>
                 </div>
             </div>
 
